src/index.css
/* ... */
  @keyframes slide-in-and-pop {
    0% {
      opacity: 0;
      transform: translateY(250px);
    }
    80% {
      transform: scale(1.25);
    }
    100% {
      opacity: 1;
      transform: scale(1) translateY(0px);
    }
  }

  .noHover {
    pointer-events: none!important;
    
  }

  /*? ########################################################################################################################  */
  /*? ########################################################################################################################  */
  /*! NAVIGATION BAR & MENU  */
  /*? ########################################################################################################################  */
  /*? ########################################################################################################################  */

  .navbar-collapse {
    margin-top: 50%;
  }

  /* removes janky transition as the height adjusts to meet full screen size  */
  .collapsing {
    transition: none;
  }

  ul.navbar-nav {
    flex-grow: 1;
    display: flex;
    justify-content: flex-end;
  }

  .navmenu-header {
    width: 100%;
    height: 3.28125em;
    display: flex;
    justify-content: space-between;
  }

  .nav-link {
    font-family: 'Archivo', sans-serif;
    font-size: 18px;
    text-align: left;
    font-weight: 600;
    color: #fff!important;
  }

  .btn-primary {
    --bs-btn-bg: none;
    --bs-btn-border-color: none;
    --bs-btn-hover-bg: none;
    --bs-btn-hover-border-color: none;
    --bs-btn-focus-shadow-rgb: none;
    --bs-btn-active-color: none;
    --bs-btn-active-bg: none;
    --bs-btn-active-border-color: none;
    --bs-btn-active-shadow: none;
    --bs-btn-disabled-bg: none;
    --bs-btn-disabled-border-color: none;
    --bs-btn-disabled-color: none;
  }

  .modal-nav-button {
    font-family: 'Archivo', sans-serif;
    font-size: 1.125em;
    font-weight: 600;
    padding: 0.5em 0px;
  }

  .modal-nav-button, a.nav-link.active {
    transition: color .35s linear, text-shadow .35s linear;
  }

  li.nav-item {
    text-align: left;
  }

  .modal-nav-button:hover, a.nav-link.active:hover {
    animation: button-pulse 1.5s linear 0s infinite backwards;
  }

  .modal-nav-button:focus, a.nav-link.active:focus {
    filter: drop-shadow(1px 0px 1px #0099ff) drop-shadow(-1px 0px 1px #0099ff) drop-shadow(0px 1px 1px #0099ff) drop-shadow(1px -1px 1px #0099ff) brightness(115%) contrast(200%)!important;
  }

  .nav-symbols {
    color: #000;
    font-weight: 500;
    font-size: 1.125em;
    margin-right: 0.3125em;
  }

  .nav-descript {
    font-family: 'Archivo', sans-serif;
    color: #fff;
    font-weight: 400;
    font-size: 1em;
  }

  .nav-email {
    font-family: 'Archivo', sans-serif;
    color: #fff;
    font-weight: 700;
    font-size: 1em;
  }

  .navbar-text.nav-descript.nav-email {
    padding-bottom: 5px!important;
  }

  .navbar-text {
    padding: 0!important;
    margin: 0!important;
    text-align: right;
    font-size: 1em;
    font-weight: 600;
  }

  .navbar-text:nth-child(2) {
    margin-bottom: 5px!important;
    font-weight: 500;
    color: black;
  }

  .navbar-text:nth-child(4) {
    font-weight: 500;
    color: black;
  }

  /* class for disabling body scrolling while navbar is open */
  .navOpenOnMobile {
    overflow: hidden;
  }
  /* class for disabling navmenu scrolling when fullscreen */
  .fixed-position {
    overflow: hidden;
  }

  .modal-backdrop.show {
    display: none!important;
  }
  
  .modal.fade .modal-dialog {
    transition: none;
    transform: none;
  }

  .fade { 
    transition: opacity .25s linear;
  }

  .modal {
    --bs-modal-zindex: 2;
    --bs-modal-header-border-color: none;
    --bs-modal-bg: none;
    --bs-modal-footer-bg: none;
  }

  #about-modal-header {
    width: 100%;
    height: 62.5px;
    display: flex;
    background-color: #000;
    padding: 10px;
    align-items: center;
    box-shadow: 0px 5px 5px #00000044;
    position: relative;
    z-index: 3;
  }

  #about-close {
    margin: 0;
  }

  #logo-bio {
    width: 45px;
    height: 45px;
    transform: scale(1.5) translateX(5px) translateY(5px);
    position: relative;
    z-index: 4;
    padding: 1px;
    animation: logo-shadow 2s ease-in-out 2s infinite both;
  }

  @keyframes logo-shadow {
    0% {
      filter: drop-shadow(8px 8px 8px #ff6600) drop-shadow(-5px -5px 5px #000) brightness(125%) contrast(200%) saturate(200%);
    }
    50% {
      filter: drop-shadow(2px 2px 2px #ff6600) drop-shadow(-1px -1px 1px #000) brightness(125%) contrast(200%) saturate(200%);
    }
    100% {
      filter: drop-shadow(8px 8px 8px #ff6600) drop-shadow(-5px -5px 5px #000) brightness(125%) contrast(200%) saturate(200%);
    }
  }

  #about-modal-title {
    /* position: relative; */
    color: #fff;
    font-family: 'Archivo Black', sans-serif;
    font-size: 36px;
    /* margin-left: 86px; */
    padding-top: 6px;
    animation: slide-in-top .5s ease-out 0s 1 normal forwards;
    text-shadow: 0px -1px #ff6600, 0px -2px #ff6600, 0px -3px #ff6600, 0px -4px #ff6600, 0px -5px #ff6600, 0px -6px #ff6600;
  }

  #about-logo-cont {
    position: relative;
    margin: 0;
    padding: 0;
    width: 10%;
  }

  #modal-title-cont {
    width: 100%;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
  }

  .btn-close {
    font-size: 1.75em;
    position: relative;
    --bs-btn-close-opacity: 1;
  }

  #about-close {
    filter: invert(1);
  }

  .modal-body {
    background-color: #000;
  }

  .bio-paragraph, #bio-intro {
    font-family: 'Archivo', sans-serif;
    font-weight: 500;
    font-size: 16px;
    margin: 0;
  }

  .bio-container:nth-child(1) {
    animation: slide-in-left .5s ease-out .25s 1 normal backwards;
  }

  .bio-container:nth-child(2) {
    animation: slide-in-right .5s ease-out .5s 1 normal backwards;
  }
/* ... */

